<resources>


    <string name="app_name">Servue سيرفيو</string>
    <string name="lbl_enter_code">Enter Your Code</string>
    <string name="title_activity_seller_dash_board">SellerDashBoardActivity</string>
    <string name="lbl_message">Messages</string>
    <string name="lbl_customer">Customer</string>
    <string name="lbl_order">Order</string>
    <string name="lbl_product">Product</string>
    <string name="lbl_wishlist">Wishlist</string>
    <string name="lbl_favourite">Favourite</string>


    <!--home-->
    <string name="lbl_baqala">Baqala</string>
    <string name="lbl_cleaning">Handmade Products</string>
    <string name="lbl_cleanmycar">Cleaning</string>
    <string name="lbl_handmade_pro">Salon</string>
    <string name="lbl_house_made">Maintenance</string>
    <string name="lbl_laundry">Housemaid</string>
    <string name="lbl_maintence">Laundry</string>
    <string name="lbl_salon">Clean my car</string>

    <!--add product-->
    <string name="lbl_title_pro">Product Title</string>
    <string name="lbl_des_pro">Product Description</string>
    <string name="lbl_price_pro">Price/Hourly</string>
    <string name="lbl_time_pro">00:00</string>


    <string name="facebook_app_id">1697047040615850</string>

    <string-array name="values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <string name="lbl_tab1_text">Map</string>
    <string name="lbl_tab2_text">List</string>
    <string name="title_activity_maps">Map</string>

    <string name="lbl_services">Services</string>
    <string name="lbl_about">About</string>
    <string name="lbl_loctation">Location</string>


    <string name="lbl_name">Name</string>
    <string name="lbl_rating">Rating</string>
    <string name="lbl_contact">Contact</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_btn_addtofavorite">Add to Favorite</string>
    <string name="lbl_btn_addtoWishList">Add to Wish List</string>

    <string name="btn_reservation">Reservation</string>
    <string name="lbl_service_details">Service Details</string>
    <string name="lbl_description">Special Request</string>
    <string name="lbl_confirmbooking">CONFIRM BOOKING</string>
    <string name="lbl_order_summary">Order Summary</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_adress">Address:</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="hint_messageET">Write a comment...</string>


    <string name="hint_houseET">House #</string>
    <string name="hint_stAddressET">Street #</string>
    <string name="hint_areaET">Area</string>
    <string name="hint_stateET">State</string>
    <string name="hint_phoneET">Phone #</string>
    <string name="lbl_service_timing">Service Timings</string>
    <string name="lbl_start">START</string>
    <string name="lbl_end">END</string>
    <string name="lbl_distance">Distance</string>
    <string name="lbl_price_range">Price Range</string>
    <string name="lbl_cat_select">Category Selected</string>
    <string name="lbl_cat_softdrink">Soft Drinks</string>
    <string name="lbl_cat_fruites_veg">Fruites and Veg...</string>
    <string name="lbl_cat_dairy_eggs">Dairy and Eggs</string>
    <string name="lbl_cat_bakery">Bakery</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_register_as_seller">Register As Seller</string>
    <string name="lbl_forgot_code">Forgot Code?</string>
    <string name="lbl_not_charge">We are just linking u up with Seller, We will not charge you anything for our Servue</string>

</resources>