<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2a536">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/app_logo" />

            <RelativeLayout
                android:id="@+id/submitbg"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_below="@+id/app_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/submitbg"
                android:gravity="center">

                <TextView
                    android:id="@+id/lbl_enter_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/lbl_enter_code"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/et_login_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lbl_enter_code"
                    android:layout_margin="20dp"
                    android:singleLine="true"
                    android:lines="1"
                    android:text=""
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/lbl_enter_code"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/btn_submit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_login_code"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/btn_submit" />

            </RelativeLayout>

            <TextView
                android:id="@+id/registerSeller"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/submitbg"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/lbl_register_as_seller"
                android:layout_centerHorizontal="true"
                android:textSize="17sp"
                android:visibility="gone"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>


            <TextView
                android:id="@+id/forgot_code"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerSeller"
                android:layout_margin="15dp"
                android:gravity="right"
                android:text="@string/lbl_forgot_code"
                android:layout_alignParentRight="true"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
